--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,14 @@ DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
 
+PG_DB_DRIVER=pgsql
+PG_DB_HOST=localhost
+PG_DB_DATABASE=hyperf
+PG_DB_PORT=5432
+PG_DB_USERNAME=postgres
+PG_DB_PASSWORD=
+PG_DB_CHARSET=utf8
+
 REDIS_HOST=localhost
 REDIS_AUTH=(null)
 REDIS_PORT=6379
